# Test

./: .dockerignore  .gitattributes  .gitignore  BLOG.md  Dockerfile  JUDGE_FEEDBACK.md  MODEL_TUNING_NOTES.md  README.md  VIDEO_SCRIPT.md  __init__.py  _sanity_check.py  batch_run.py  client.py  crisis_training_log.json  dissection.json  eval.py  eval_baselines.py  eval_random.json  eval_summary.json  eval_trained.json  generate_reward_curves.py  grader.py  grpo_reward_log_synthetic.json  inference.py  latest.json  models.py  openenv.yaml  oracle_baseline.json  plot_belief_convergence.py  plot_difficulty.py  plot_rewards.py  pyproject.toml  q_network.pt  q_network_log.json  requirements-train.txt  requirements.txt  reward_fn.py  reward_log.json  run_all.py  run_local_llm.py  (+11 more)
.claude/: settings.local.json
crisis-negotiator-grpo/: README.md
crisis-negotiator-trained/: config.json  generation_config.json  model.safetensors
eval/: ablation_mini_table.py  analyze_metrics.py  checkpoint_league.py  eval.py  eval_baselines.py  eval_exploit.py  eval_generalization.py  generate_dissection.py  long_horizon_benchmark.py  plot_belief_convergence.py  reward_gaming_audit.py  run_multiseed_eval.py
experiments/: env_extensions.py  train_coevolve_v2_test.py  train_colab_v3.ipynb
notebooks/: run_all_hf.ipynb  train_a100.ipynb  train_kaggle.ipynb  train_kaggle_v2.ipynb
plots/: dissection.html
results/: ablation_mini_table.json  belief_convergence_results.json  coevolution_log.json  crisis_training_log.json  crisis_training_log_v2.json  eval_heuristic.json  eval_summary.json  (+7 more)
(+70 files in other folders)
